manifests/app/base/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: spring-petclinic
  name: spring-petclinic
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: spring-petclinic
  template:
    metadata:
      labels:
        app.kubernetes.io/name: spring-petclinic
    spec:
      containers:
        - name: spring-petclinic
          image: raphael1021/spring-petclinic-data-jdbc:jib
          lifecycle:
            preStop:
              exec:
                command: ["/bin/sh", "-c", "sleep 10"]
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /actuator/health/liveness
              port: port
            initialDelaySeconds: 10
            periodSeconds: 10
          ports:
            - containerPort: 8080
              name: port
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: port
            initialDelaySeconds: 10
            periodSeconds: 10
          resources:
            limits:
              memory: "2Gi"
            requests:
              cpu: "2000m"
              memory: "2Gi"
          volumeMounts:
            - name: logs
              mountPath: /logs
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
      terminationGracePeriodSeconds: 30
      volumes:
        - name: logs
          emptyDir: { }
