manifests/app/base/Service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: spring-petclinic
  name: spring-petclinic
spec:
  ports:
    - name: service
      port: 8080
      targetPort: 8080
  selector:
    app.kubernetes.io/name: spring-petclinic
